feat(cf): add SpEL support for cf manifests (#4167)